--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -43,10 +43,11 @@
 <url>http://13.232.16.226:8082/artifactory/mvn-suresh-release</url>
   </repository>
 </distributionManagement>
-	<scm>
-		<connection>git@github.com:bhagwanusa/maven-hello-world.git</connection>
-	</scm>	
 		
+	<scm>        
+    <connection>git@github.com:bhagwanusa/maven-hello-world.git</connection>
+      <developerConnection>git@github.com:bhagwanusa/maven-hello-world.git</developerConnection>
+    </scm>	
   <build>
     <plugins>
       <plugin>
